tests/fixtures/invalid/round_str_str.py
# Cannot call round() with Str, Str
x = round("hello", "hello")
